[gd_scene format=3 uid="uid://dkua340gu4s8k"]

[ext_resource type="Script" uid="uid://c2c7atooifpu4" path="res://03_map/03_map.gd" id="1_cim6m"]
[ext_resource type="PackedScene" uid="uid://c50vhh8f87mip" path="res://03_map/Camp.tscn" id="1_e7lp6"]
[ext_resource type="Texture2D" uid="uid://cmywg2ujq53f5" path="res://03_map/assets/map_assets/ways_1.png" id="2_874qi"]
[ext_resource type="Texture2D" uid="uid://t4fc5qnw60ea" path="res://03_map/assets/map_assets/schild.png" id="3_5w4bl"]
[ext_resource type="Theme" uid="uid://p58o4y2jdivt" path="res://ui/theme.tres" id="3_kin3b"]
[ext_resource type="Texture2D" uid="uid://biekdfoxeeveo" path="res://03_map/assets/map_assets/ways_2.png" id="4_8nbbj"]
[ext_resource type="Texture2D" uid="uid://debmbad2byulb" path="res://03_map/assets/map_assets/ways_3.png" id="5_8g513"]
[ext_resource type="Texture2D" uid="uid://dn7bcdeadf2qw" path="res://03_map/assets/map_assets/ways_4.png" id="6_m8q1i"]
[ext_resource type="Texture2D" uid="uid://drpklbpggbpgv" path="res://03_map/assets/map_assets/ways_5.png" id="7_3q07m"]
[ext_resource type="Texture2D" uid="uid://dsxhltv8puq71" path="res://03_map/assets/map_assets/ways_6.png" id="8_nmoo8"]
[ext_resource type="Texture2D" uid="uid://cp4kf23vjfytt" path="res://03_map/assets/map_assets/ways_7.png" id="9_uerfu"]
[ext_resource type="Texture2D" uid="uid://e1vcceshcr0u" path="res://03_map/assets/map_assets/ways_8.png" id="10_rutwn"]
[ext_resource type="Texture2D" uid="uid://uu44vgmtb55h" path="res://03_map/assets/map_assets/way_castle.png" id="11_kxu0g"]
[ext_resource type="Texture2D" uid="uid://bi4gjxyec8yyw" path="res://03_map/assets/map_assets/castle.png" id="12_8yygc"]
[ext_resource type="Texture2D" uid="uid://dusowdvpxyo3h" path="res://03_map/assets/map_assets/way_1.png" id="13_5w4bl"]
[ext_resource type="Texture2D" uid="uid://bfqvvr1fggmxn" path="res://03_map/assets/map_assets/forest_1.png" id="14_m8q1i"]
[ext_resource type="Texture2D" uid="uid://cruw3suugm8rk" path="res://03_map/assets/map_assets/forest_2.png" id="15_3q07m"]
[ext_resource type="PackedScene" uid="uid://jc6hts7usq3t" path="res://03_map/Cover.tscn" id="15_8nbbj"]
[ext_resource type="Texture2D" uid="uid://df5d685qvyt18" path="res://03_map/wagen_icon.png" id="17_nmoo8"]
[ext_resource type="AudioStream" uid="uid://dxqdex1775gv0" path="res://03_map/sound/Szene-03-Karte.wav" id="19_3q07m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3q07m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmoo8"]
bg_color = Color(0.88, 0.484, 0, 0.4627451)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uerfu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rutwn"]

[node name="Map" type="Node2D" unique_id=1246774286]
script = ExtResource("1_cim6m")

[node name="Content" type="Node2D" parent="." unique_id=1994187122]

[node name="Background" type="Node2D" parent="Content" unique_id=1604734897]

[node name="ColorRect" type="ColorRect" parent="Content/Background" unique_id=793189283]
offset_left = -9.0
offset_top = -2.0
offset_right = 10534.0
offset_bottom = 1152.0
color = Color(0.98, 0.81078666, 0.6174, 1)

[node name="Ways1" type="Sprite2D" parent="Content/Background" unique_id=1733117448]
position = Vector2(1712, 606)
texture = ExtResource("2_874qi")

[node name="Schild" type="Sprite2D" parent="Content/Background" unique_id=797857173]
position = Vector2(1902, 561)
texture = ExtResource("3_5w4bl")

[node name="Schild6" type="Sprite2D" parent="Content/Background" unique_id=1867160988]
position = Vector2(8046, 659)
texture = ExtResource("3_5w4bl")

[node name="Schild2" type="Sprite2D" parent="Content/Background" unique_id=91579463]
position = Vector2(3147, 579)
texture = ExtResource("3_5w4bl")

[node name="Ways2" type="Sprite2D" parent="Content/Background" unique_id=2005214743]
position = Vector2(2316, 598)
texture = ExtResource("4_8nbbj")

[node name="Ways10" type="Sprite2D" parent="Content/Background" unique_id=1483175408]
position = Vector2(7218, 651)
texture = ExtResource("4_8nbbj")

[node name="Ways3" type="Sprite2D" parent="Content/Background" unique_id=746034184]
position = Vector2(2976, 606)
texture = ExtResource("5_8g513")

[node name="Ways11" type="Sprite2D" parent="Content/Background" unique_id=103234991]
position = Vector2(7862, 676)
texture = ExtResource("5_8g513")

[node name="Ways4" type="Sprite2D" parent="Content/Background" unique_id=1076936050]
position = Vector2(3526, 550)
texture = ExtResource("6_m8q1i")

[node name="Ways5" type="Sprite2D" parent="Content/Background" unique_id=683851376]
position = Vector2(4168, 637)
texture = ExtResource("7_3q07m")

[node name="Ways6" type="Sprite2D" parent="Content/Background" unique_id=366017961]
position = Vector2(4781, 662)
texture = ExtResource("8_nmoo8")

[node name="Schild3" type="Sprite2D" parent="Content/Background" unique_id=1466301140]
position = Vector2(4359, 597)
texture = ExtResource("3_5w4bl")

[node name="Schild4" type="Sprite2D" parent="Content/Background" unique_id=1967956655]
position = Vector2(5606, 623)
texture = ExtResource("3_5w4bl")

[node name="Schild5" type="Sprite2D" parent="Content/Background" unique_id=526278480]
position = Vector2(6799, 621)
texture = ExtResource("3_5w4bl")

[node name="Ways7" type="Sprite2D" parent="Content/Background" unique_id=1915116802]
position = Vector2(5432, 644)
texture = ExtResource("9_uerfu")

[node name="Ways8" type="Sprite2D" parent="Content/Background" unique_id=2135611582]
position = Vector2(5981, 664)
texture = ExtResource("10_rutwn")

[node name="Ways12" type="Sprite2D" parent="Content/Background" unique_id=2023333164]
position = Vector2(1098, 609)
texture = ExtResource("10_rutwn")

[node name="Ways9" type="Sprite2D" parent="Content/Background" unique_id=1882286442]
position = Vector2(6609, 667)
texture = ExtResource("2_874qi")

[node name="WayCastle" type="Sprite2D" parent="Content/Background" unique_id=397243209]
position = Vector2(8393, 785)
texture = ExtResource("11_kxu0g")

[node name="Castle" type="Sprite2D" parent="Content/Background" unique_id=202015473]
position = Vector2(8687, 645)
texture = ExtResource("12_8yygc")

[node name="Schild7" type="Sprite2D" parent="Content/Background" unique_id=1135921201]
position = Vector2(723, 570)
texture = ExtResource("3_5w4bl")

[node name="Way1" type="Sprite2D" parent="Content/Background" unique_id=1121870687]
position = Vector2(540, 594)
texture = ExtResource("13_5w4bl")

[node name="Forest1" type="Sprite2D" parent="Content/Background" unique_id=640879009]
position = Vector2(682, 433)
texture = ExtResource("14_m8q1i")

[node name="Forest2" type="Sprite2D" parent="Content/Background" unique_id=147156975]
position = Vector2(1281, 698)
texture = ExtResource("14_m8q1i")

[node name="Forest3" type="Sprite2D" parent="Content/Background" unique_id=1699043857]
position = Vector2(1906, 397)
texture = ExtResource("14_m8q1i")

[node name="Forest4" type="Sprite2D" parent="Content/Background" unique_id=849422831]
position = Vector2(2101, 320)
texture = ExtResource("14_m8q1i")

[node name="Forest5" type="Sprite2D" parent="Content/Background" unique_id=1014443930]
position = Vector2(1803, 188)
texture = ExtResource("14_m8q1i")

[node name="Forest6" type="Sprite2D" parent="Content/Background" unique_id=267410616]
position = Vector2(2468, 276)
texture = ExtResource("14_m8q1i")

[node name="Forest7" type="Sprite2D" parent="Content/Background" unique_id=632030549]
position = Vector2(2644, 489)
texture = ExtResource("14_m8q1i")

[node name="Forest8" type="Sprite2D" parent="Content/Background" unique_id=494228263]
position = Vector2(1986, 801)
texture = ExtResource("14_m8q1i")

[node name="Forest9" type="Sprite2D" parent="Content/Background" unique_id=14064107]
position = Vector2(850, 893)
texture = ExtResource("14_m8q1i")

[node name="Forest10" type="Sprite2D" parent="Content/Background" unique_id=1535235661]
position = Vector2(1034, 937)
texture = ExtResource("14_m8q1i")

[node name="Forest11" type="Sprite2D" parent="Content/Background" unique_id=1084953552]
position = Vector2(1357, 966)
texture = ExtResource("14_m8q1i")

[node name="Forest12" type="Sprite2D" parent="Content/Background" unique_id=591097138]
position = Vector2(2412, 900)
texture = ExtResource("14_m8q1i")

[node name="Forest13" type="Sprite2D" parent="Content/Background" unique_id=878506042]
position = Vector2(2656, 706)
texture = ExtResource("14_m8q1i")

[node name="Forest14" type="Sprite2D" parent="Content/Background" unique_id=680056691]
position = Vector2(3247, 780)
texture = ExtResource("14_m8q1i")

[node name="Forest15" type="Sprite2D" parent="Content/Background" unique_id=1774014282]
position = Vector2(3451, 823)
texture = ExtResource("14_m8q1i")

[node name="Forest16" type="Sprite2D" parent="Content/Background" unique_id=936088310]
position = Vector2(3277, 920)
texture = ExtResource("14_m8q1i")

[node name="Forest17" type="Sprite2D" parent="Content/Background" unique_id=964547518]
position = Vector2(3688, 897)
texture = ExtResource("14_m8q1i")

[node name="Forest18" type="Sprite2D" parent="Content/Background" unique_id=544186165]
position = Vector2(3992, 209)
texture = ExtResource("14_m8q1i")

[node name="Forest19" type="Sprite2D" parent="Content/Background" unique_id=234625714]
position = Vector2(3263, 176)
texture = ExtResource("14_m8q1i")

[node name="Forest20" type="Sprite2D" parent="Content/Background" unique_id=115122505]
position = Vector2(3042, 149)
texture = ExtResource("14_m8q1i")

[node name="Forest21" type="Sprite2D" parent="Content/Background" unique_id=1902962421]
position = Vector2(2795, 179)
texture = ExtResource("14_m8q1i")

[node name="Forest22" type="Sprite2D" parent="Content/Background" unique_id=1654669770]
position = Vector2(2538, 126)
texture = ExtResource("14_m8q1i")

[node name="Forest23" type="Sprite2D" parent="Content/Background" unique_id=1249714250]
position = Vector2(4219, 273)
texture = ExtResource("14_m8q1i")

[node name="Forest24" type="Sprite2D" parent="Content/Background" unique_id=2064097107]
position = Vector2(4433, 400)
texture = ExtResource("14_m8q1i")

[node name="Forest25" type="Sprite2D" parent="Content/Background" unique_id=1776176991]
position = Vector2(4961, 176)
texture = ExtResource("14_m8q1i")

[node name="Forest26" type="Sprite2D" parent="Content/Background" unique_id=1186223099]
position = Vector2(5743, 326)
texture = ExtResource("14_m8q1i")

[node name="Forest27" type="Sprite2D" parent="Content/Background" unique_id=134600263]
position = Vector2(6234, 242)
texture = ExtResource("14_m8q1i")

[node name="Forest28" type="Sprite2D" parent="Content/Background" unique_id=1408520743]
position = Vector2(4429, 940)
texture = ExtResource("14_m8q1i")

[node name="Forest29" type="Sprite2D" parent="Content/Background" unique_id=1209612258]
position = Vector2(5495, 993)
texture = ExtResource("14_m8q1i")

[node name="Forest30" type="Sprite2D" parent="Content/Background" unique_id=1600408521]
position = Vector2(5896, 966)
texture = ExtResource("14_m8q1i")

[node name="Forest31" type="Sprite2D" parent="Content/Background" unique_id=1820364423]
position = Vector2(6548, 271)
texture = ExtResource("14_m8q1i")

[node name="Forest32" type="Sprite2D" parent="Content/Background" unique_id=1558353124]
position = Vector2(6894, 291)
texture = ExtResource("14_m8q1i")

[node name="Forest33" type="Sprite2D" parent="Content/Background" unique_id=1673725730]
position = Vector2(6751, 896)
texture = ExtResource("14_m8q1i")

[node name="Forest34" type="Sprite2D" parent="Content/Background" unique_id=1695634715]
position = Vector2(6417, 1112)
texture = ExtResource("14_m8q1i")

[node name="Forest35" type="Sprite2D" parent="Content/Background" unique_id=614509718]
position = Vector2(7098, 957)
texture = ExtResource("14_m8q1i")

[node name="Forest36" type="Sprite2D" parent="Content/Background" unique_id=691693595]
position = Vector2(8076, 261)
texture = ExtResource("14_m8q1i")

[node name="Forest37" type="Sprite2D" parent="Content/Background" unique_id=380439069]
position = Vector2(7465, 243)
texture = ExtResource("14_m8q1i")

[node name="Forest38" type="Sprite2D" parent="Content/Background" unique_id=484309447]
position = Vector2(8094, 914)
texture = ExtResource("14_m8q1i")

[node name="Forest39" type="Sprite2D" parent="Content/Background" unique_id=964943079]
position = Vector2(8313, 428)
texture = ExtResource("14_m8q1i")

[node name="Forest40" type="Sprite2D" parent="Content/Background" unique_id=1062372837]
position = Vector2(7891, 164)
texture = ExtResource("14_m8q1i")

[node name="Forest41" type="Sprite2D" parent="Content/Background" unique_id=640837099]
position = Vector2(8335, 279)
texture = ExtResource("14_m8q1i")

[node name="Forest42" type="Sprite2D" parent="Content/Background" unique_id=546798466]
position = Vector2(8131, 376)
texture = ExtResource("14_m8q1i")

[node name="Forest43" type="Sprite2D" parent="Content/Background" unique_id=2039830072]
position = Vector2(8265, 978)
texture = ExtResource("14_m8q1i")

[node name="Forest44" type="Sprite2D" parent="Content/Background" unique_id=322018227]
position = Vector2(7566, 747)
texture = ExtResource("14_m8q1i")

[node name="Forest46" type="Sprite2D" parent="Content/Background" unique_id=557089064]
position = Vector2(817, 347)
texture = ExtResource("15_3q07m")

[node name="Forest47" type="Sprite2D" parent="Content/Background" unique_id=927798451]
position = Vector2(643, 316)
texture = ExtResource("15_3q07m")

[node name="Forest48" type="Sprite2D" parent="Content/Background" unique_id=107115361]
position = Vector2(485, 461)
texture = ExtResource("15_3q07m")

[node name="Forest49" type="Sprite2D" parent="Content/Background" unique_id=1252638026]
position = Vector2(479, 361)
texture = ExtResource("15_3q07m")

[node name="Forest50" type="Sprite2D" parent="Content/Background" unique_id=1470337319]
position = Vector2(550, 681)
texture = ExtResource("15_3q07m")

[node name="Forest51" type="Sprite2D" parent="Content/Background" unique_id=593484828]
position = Vector2(477, 749)
texture = ExtResource("15_3q07m")

[node name="Forest52" type="Sprite2D" parent="Content/Background" unique_id=2115070627]
position = Vector2(969, 803)
texture = ExtResource("15_3q07m")

[node name="Forest53" type="Sprite2D" parent="Content/Background" unique_id=1312871843]
position = Vector2(1100, 660)
texture = ExtResource("15_3q07m")

[node name="Forest54" type="Sprite2D" parent="Content/Background" unique_id=1795369615]
position = Vector2(1471, 678)
texture = ExtResource("15_3q07m")

[node name="Forest55" type="Sprite2D" parent="Content/Background" unique_id=2115374569]
position = Vector2(1425, 487)
texture = ExtResource("15_3q07m")

[node name="Forest56" type="Sprite2D" parent="Content/Background" unique_id=86514925]
position = Vector2(1645, 257)
texture = ExtResource("15_3q07m")

[node name="Forest57" type="Sprite2D" parent="Content/Background" unique_id=778104676]
position = Vector2(1805, 303)
texture = ExtResource("15_3q07m")

[node name="Forest58" type="Sprite2D" parent="Content/Background" unique_id=22561086]
position = Vector2(1840, 863)
texture = ExtResource("15_3q07m")

[node name="Forest59" type="Sprite2D" parent="Content/Background" unique_id=1920094395]
position = Vector2(2234, 857)
texture = ExtResource("15_3q07m")

[node name="Forest60" type="Sprite2D" parent="Content/Background" unique_id=871518066]
position = Vector2(2451, 512)
texture = ExtResource("15_3q07m")

[node name="Forest61" type="Sprite2D" parent="Content/Background" unique_id=877413108]
position = Vector2(2465, 683)
texture = ExtResource("15_3q07m")

[node name="Forest62" type="Sprite2D" parent="Content/Background" unique_id=1442485195]
position = Vector2(2609, 939)
texture = ExtResource("15_3q07m")

[node name="Forest63" type="Sprite2D" parent="Content/Background" unique_id=1793668797]
position = Vector2(2965, 263)
texture = ExtResource("15_3q07m")

[node name="Forest64" type="Sprite2D" parent="Content/Background" unique_id=1215173056]
position = Vector2(3136, 457)
texture = ExtResource("15_3q07m")

[node name="Forest65" type="Sprite2D" parent="Content/Background" unique_id=935459450]
position = Vector2(3131, 859)
texture = ExtResource("15_3q07m")

[node name="Forest66" type="Sprite2D" parent="Content/Background" unique_id=783266943]
position = Vector2(4204, 161)
texture = ExtResource("15_3q07m")

[node name="Forest67" type="Sprite2D" parent="Content/Background" unique_id=1601677387]
position = Vector2(5601, 893)
texture = ExtResource("15_3q07m")

[node name="Forest68" type="Sprite2D" parent="Content/Background" unique_id=1541642440]
position = Vector2(5675, 783)
texture = ExtResource("15_3q07m")

[node name="Forest69" type="Sprite2D" parent="Content/Background" unique_id=2052160481]
position = Vector2(5322, 1015)
texture = ExtResource("15_3q07m")

[node name="Forest70" type="Sprite2D" parent="Content/Background" unique_id=695417914]
position = Vector2(4829, 842)
texture = ExtResource("15_3q07m")

[node name="Forest71" type="Sprite2D" parent="Content/Background" unique_id=1521612178]
position = Vector2(4849, 243)
texture = ExtResource("15_3q07m")

[node name="Forest72" type="Sprite2D" parent="Content/Background" unique_id=216836880]
position = Vector2(6527, 193)
texture = ExtResource("15_3q07m")

[node name="Forest45" type="Sprite2D" parent="Content/Background" unique_id=833694409]
position = Vector2(6719, 182)
texture = ExtResource("14_m8q1i")

[node name="Camp4" parent="Content" unique_id=100378017 instance=ExtResource("1_e7lp6")]
offset_left = 258.0
offset_top = 560.0
offset_right = 318.0
offset_bottom = 620.0
disabled = true

[node name="Section1" type="Control" parent="Content" unique_id=416889842]
layout_mode = 3
anchors_preset = 0
offset_left = 1405.0
offset_top = 217.0
offset_right = 1445.0
offset_bottom = 257.0
size_flags_horizontal = 4
mouse_filter = 1

[node name="Camp" parent="Content/Section1" unique_id=232952716 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 31.0
offset_top = 130.0
offset_right = 91.0
offset_bottom = 190.0

[node name="Camp2" parent="Content/Section1" unique_id=286023005 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 47.0
offset_top = 316.0
offset_right = 107.0
offset_bottom = 376.0

[node name="Camp3" parent="Content/Section1" unique_id=739430643 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 5.0
offset_top = 532.0
offset_right = 65.0
offset_bottom = 592.0

[node name="Section2" type="Control" parent="Content" unique_id=196430379]
layout_mode = 3
anchors_preset = 0
offset_left = 2665.0
offset_top = 105.0
offset_right = 2705.0
offset_bottom = 145.0
size_flags_horizontal = 4
mouse_filter = 1

[node name="Camp" parent="Content/Section2" unique_id=680388875 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 14.0
offset_top = 193.0
offset_right = 74.0
offset_bottom = 253.0

[node name="Camp2" parent="Content/Section2" unique_id=2075796878 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 64.0
offset_top = 424.0
offset_right = 124.0
offset_bottom = 484.0

[node name="Camp3" parent="Content/Section2" unique_id=357094104 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 2.0
offset_top = 701.0
offset_right = 62.0
offset_bottom = 761.0

[node name="Section3" type="Control" parent="Content" unique_id=1712970683]
layout_mode = 3
anchors_preset = 0
offset_left = 3899.0
offset_top = 234.0
offset_right = 3939.0
offset_bottom = 274.0
size_flags_horizontal = 4
mouse_filter = 1

[node name="Camp" parent="Content/Section3" unique_id=1224897649 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = -20.0
offset_top = 138.0
offset_right = 40.0
offset_bottom = 198.0

[node name="Camp2" parent="Content/Section3" unique_id=1859093070 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = -1.0
offset_top = 349.0
offset_right = 59.0
offset_bottom = 409.0

[node name="Camp3" parent="Content/Section3" unique_id=79389888 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = -35.0
offset_top = 559.0
offset_right = 25.0
offset_bottom = 619.0

[node name="Section4" type="Control" parent="Content" unique_id=774143955]
layout_mode = 3
anchors_preset = 0
offset_left = 5142.0
offset_top = 138.0
offset_right = 5182.0
offset_bottom = 178.0
size_flags_horizontal = 4
mouse_filter = 1

[node name="Camp" parent="Content/Section4" unique_id=1295709955 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_top = 187.0
offset_right = 60.0
offset_bottom = 247.0

[node name="Camp2" parent="Content/Section4" unique_id=1040822076 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 47.0
offset_top = 422.0
offset_right = 107.0
offset_bottom = 482.0

[node name="Camp3" parent="Content/Section4" unique_id=1942070255 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = -10.0
offset_top = 699.0
offset_right = 50.0
offset_bottom = 759.0

[node name="Section5" type="Control" parent="Content" unique_id=2125211359]
layout_mode = 3
anchors_preset = 0
offset_left = 6334.0
offset_top = 233.0
offset_right = 6374.0
offset_bottom = 273.0
size_flags_horizontal = 4
mouse_filter = 1

[node name="Camp" parent="Content/Section5" unique_id=1608620320 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = -30.0
offset_top = 170.0
offset_right = 30.0
offset_bottom = 230.0

[node name="Camp2" parent="Content/Section5" unique_id=1563140835 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 7.0
offset_top = 358.0
offset_right = 67.0
offset_bottom = 418.0

[node name="Camp3" parent="Content/Section5" unique_id=954491074 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = -17.0
offset_top = 590.0
offset_right = 43.0
offset_bottom = 650.0

[node name="Section6" type="Control" parent="Content" unique_id=229113262]
layout_mode = 3
anchors_preset = 0
offset_left = 7559.0
offset_top = 164.0
offset_right = 7599.0
offset_bottom = 204.0
size_flags_horizontal = 4
mouse_filter = 1

[node name="Camp" parent="Content/Section6" unique_id=1231665876 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_top = 187.0
offset_right = 60.0
offset_bottom = 247.0

[node name="Camp2" parent="Content/Section6" unique_id=1715063152 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 60.0
offset_top = 425.0
offset_right = 120.0
offset_bottom = 485.0

[node name="Camp3" parent="Content/Section6" unique_id=1316161574 instance=ExtResource("1_e7lp6")]
layout_mode = 0
offset_left = 4.0
offset_top = 677.0
offset_right = 64.0
offset_bottom = 737.0

[node name="CoachIcon1" type="Node2D" parent="Content" unique_id=481415052]
visible = false
position = Vector2(650, 571)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon1" unique_id=709537729]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="CoachIcon2" type="Node2D" parent="Content" unique_id=491727781]
visible = false
position = Vector2(1814, 563)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon2" unique_id=155773752]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="CoachIcon3" type="Node2D" parent="Content" unique_id=1936624005]
visible = false
position = Vector2(3068, 586)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon3" unique_id=157453479]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="CoachIcon4" type="Node2D" parent="Content" unique_id=1758217835]
visible = false
position = Vector2(4278, 601)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon4" unique_id=1352149376]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="CoachIcon5" type="Node2D" parent="Content" unique_id=1529463177]
visible = false
position = Vector2(5523, 626)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon5" unique_id=1956741136]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="CoachIcon6" type="Node2D" parent="Content" unique_id=701822824]
visible = false
position = Vector2(6714, 620)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon6" unique_id=2002338505]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="CoachIcon7" type="Node2D" parent="Content" unique_id=765495863]
visible = false
position = Vector2(7970, 656)
metadata/_edit_group_ = true

[node name="WagenIcon" type="Sprite2D" parent="Content/CoachIcon7" unique_id=547614042]
position = Vector2(4, 0)
texture = ExtResource("17_nmoo8")

[node name="Cover1" parent="Content" unique_id=455435466 instance=ExtResource("15_8nbbj")]

[node name="Cover2" parent="Content" unique_id=1965120709 instance=ExtResource("15_8nbbj")]
offset_left = 1714.0
offset_right = 1754.0

[node name="Cover3" parent="Content" unique_id=547008430 instance=ExtResource("15_8nbbj")]
offset_left = 2971.0
offset_right = 3011.0

[node name="Cover4" parent="Content" unique_id=1792112525 instance=ExtResource("15_8nbbj")]
offset_left = 4169.0
offset_right = 4209.0

[node name="Cover5" parent="Content" unique_id=1561377966 instance=ExtResource("15_8nbbj")]
offset_left = 5432.0
offset_right = 5472.0

[node name="Cover6" parent="Content" unique_id=1849268270 instance=ExtResource("15_8nbbj")]
offset_left = 6635.0
offset_right = 6675.0

[node name="CastleButton" type="Button" parent="Content" unique_id=1685403370]
offset_left = 8371.0
offset_top = 429.0
offset_right = 9063.0
offset_bottom = 859.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_3q07m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nmoo8")
theme_override_styles/hover = SubResource("StyleBoxFlat_nmoo8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_uerfu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rutwn")
disabled = true

[node name="Front" type="Control" parent="." unique_id=1359911553]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="StartButton" type="Button" parent="Front" unique_id=696691655]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -363.0
offset_top = -118.0
offset_right = -71.0
offset_bottom = -46.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_kin3b")
theme_override_font_sizes/font_size = 32
text = "Start Travel"

[node name="Fade" type="ColorRect" parent="." unique_id=2075730082]
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="sound_open" type="AudioStreamPlayer" parent="." unique_id=248187868]
stream = ExtResource("19_3q07m")

[connection signal="pressed" from="Content/CastleButton" to="." method="_on_castle_button_pressed"]
